--- a/index.html
+++ b/index.html
@@ -626,7 +626,7 @@
                                                             <a href="https://direct.mit.edu/imag/article/doi/10.1162/imag_a_00173/120839/Concurrent-maintenance-of-both-veridical-and" class="tooltips" title="External link" target="_blank">
                                                                 <i class="icon-external-link"></i> 
                                                             </a>
-															<a href="https://mitp.silverchair-cdn.com/mitp/content_public/journal/imag/2/10.1162_imag_a_00173/4/imag_a_00173.pdf?Expires=1719313245&Signature=fcaVhFZeb56R3KRu3pamswignixdwtq2mPkVgVL4sTcr4GZ-I7wzSHZCYnD1NOZPnDInbSBhjd~nvMZ9ZN8yWBTFVQLpyicdQmJNLXn0zJDY69np65rkZZW2QrQ98J7JwXfSdc~MPt~3gJkD4KZ2ubdcS4zoY~eicJgdkOSeYgtJJCugSpAOLhh0QNwV70a4FvgVl4j7BikyjnRIF6XhXEOy5yaUD2MjQ85heTiKOoiaccc9-J25yXLmWUBCuuDLezKn7N7tynLBZtvS7drlSqWRrMReP9kgO8KERPAgDQByBn8lA6uVilHj0M73lJLPnKvomogo43H3pgXtgmYzCQ__&Key-Pair-Id=APKAIE5G5CRDK6RD3PGA" class="tooltips" title="Download" target="_blank">
+															<a href="https://direct.mit.edu/imag/article-pdf/doi/10.1162/imag_a_00173/2373425/imag_a_00173.pdf" class="tooltips" title="Download" target="_blank">
                                                                 <i class="icon-cloud-download"></i>
                                                             </a>
 															<a href="https://osf.io/3hdpc" class="tooltips" title="Data" target="_blank">
@@ -667,7 +667,7 @@
                                                             <a href="https://www.sciencedirect.com/science/article/pii/S1053810023001642" class="tooltips" title="External link" target="_blank">
                                                                 <i class="icon-external-link"></i> 
                                                             </a>
-															<a href="https://pdf.sciencedirectassets.com/272616/1-s2.0-S1053810023X00105/1-s2.0-S1053810023001642/main.pdf?X-Amz-Security-Token=IQoJb3JpZ2luX2VjEHkaCXVzLWVhc3QtMSJHMEUCIDOVnqIocjGKvuN8Lb36Cd8i4ITZafjiM4EOAekS9gD4AiEA6KBoYmKrAYwaV%2FsURWszK5dnU%2BMW3%2BGrrieJDCReBT8qswUIQhAFGgwwNTkwMDM1NDY4NjUiDL%2Fv0EJZ4k1ID2yiACqQBX8ZMVZXGEpJ8mm1ghC5sixnjNVrQxkSDzojr6arGvjWMq3ldkYbnwGDh1miQO%2BwFisq1i2J0ONFHSYIqCa1%2BUF54ZzC7aviGV09UKp%2BVAubNOBuytK4RY5xU%2B6CZTibgrp0Y%2B6riGONUbICjikOMdciIfXau0YZMR%2FLBtkFAUc0RC6p21W9FU%2B6fRr1B7gDfnjWywzwL6MTlSJylnE8CM%2FSUIKUvmcLkJGYecQ%2FMa4%2BXp8iqjpc9J4arXZHZfXOArGueOgNTjy8CEoFGtnBm3H3EpTMJ6M%2B2xW71p0jYSpuMdSJf6EVvk06Bvz8cUQPmwCCYo5AAJiqX7wc%2FdGdRMkNmC%2BS%2BjmV7t9gFI4k54i848Yc99AZmacepfAHVcY%2BJYt7GfsDpTV0sJgBwJfvGg%2BWaWH1lr8E4zEnLx%2BqqmZgMx5qdrSkqmR9MjqBkQ7TnbKc9%2FinndqtqRQLiUxfkinjzFJWyQlDZwpCs2Jrxxt%2BnFYrBeD3dMvvCZwN%2Fgiw1DN9ahc2XoCXu%2F4hSCpBlYAYmahndki45%2B5qEfZ2Fb7R2RXbYf6wk3ewlcxFuCy0dzeAdbXUS88EvPEC4I%2Bj41eT5I%2FbAYW21yWC%2FfFmAW2PoZCHlB%2FyxY7h8Fp83Y7eG09VuijiquVbKw%2FbNy7Sp4oaQKUI%2FcYMOMcZIElALLX%2Bss%2FatwbGYgA4ZT2NCqwpWF4%2FD6X5ZgsQcc9aLdNRsAe0ikaB3G38gMjDwAfyH0LMMEF1qqsIEtiHaPYATmOQetfX4D8Knkt0aulMoipmWW4MSgJVJaBk8VEvdvm8tMTqbqEyOmebMqxmM7FZVF4qZwm%2Bbo5Diuo%2BtpQ5FYTrHgIFwvsL%2Fns%2FNqJqRA9trFXPMPy07a0GOrEBL9%2FE5MF%2FN2evLjj4khQAMLctkz87vrjbM99TFml4zKgWAbfmk39KfPr14hr8IrhwM3pkUCrQVCIwfkcDElR%2BABynQRLbS0oyQPF9tF0C9f44XAFgVPqsrBzZFEIJJZtnJVmfPbGJemNw6fHEeCWQY%2BWabUg7IRNZALxlsk7lrLAvp%2Bw2iQ9Dr1cK2VJx6QHOwbKGi4WufPKoVfeMksjGUd8X%2FBKCAOVizIOa5VbNPtXD&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Date=20240201T091312Z&X-Amz-SignedHeaders=host&X-Amz-Expires=300&X-Amz-Credential=ASIAQ3PHCVTYXYI4KNUC%2F20240201%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Signature=8d07434e41e5c82e10d7a2fd960b04f48eeb5a18a6ef92fcb29f82a07f219aa3&hash=194b462ba153339fc5793682972828366e4750f2e8678982ff8059bab09e8bad&host=68042c943591013ac2b2430a89b270f6af2c76d8dfd086a07176afe7c76c2c61&pii=S1053810023001642&tid=spdf-be414b5e-9e53-453e-a61a-79f479203263&sid=ff2cfd443d6ad540a66ae3346f56c08b960dgxrqb&type=client&tsoh=d3d3LnNjaWVuY2VkaXJlY3QuY29t&ua=1b075b50055b54530301&rr=84e913be683e3757&cc=ae" class="tooltips" title="Download" target="_blank">
+															<a href="https://www.sciencedirect.com/science/article/pii/S1053810023001642/pdfft?md5=6013e46f651ec491aa01cdebbaed322b&pid=1-s2.0-S1053810023001642-main.pdf" class="tooltips" title="Download" target="_blank">
                                                                 <i class="icon-cloud-download"></i>
                                                             </a>
 															<a href="https://osf.io/am5y7/" class="tooltips" title="Data" target="_blank">
@@ -1257,7 +1257,7 @@
                                                             <a href="#" class="pubcollapse">
                                                                 <i class="icon-expand-alt"></i>
                                                             </a>
-                                                            <a href="https://www.egitenkitap.com/urun/fizyolojik-psikoloji" class="tooltips" title="External link" target="_blank">
+                                                            <a href="https://www.egitenkitap.com/fizyolojik-psikoloji?search=fizyolojik%20psikoloji" class="tooltips" title="External link" target="_blank">
                                                                 <i class="icon-external-link"></i>
                                                             </a>
                                                             
@@ -1412,6 +1412,9 @@
                                                             </a>
                                                             <a href="https://link.springer.com/article/10.1007/s00394-021-02767-x" class="tooltips" title="External link" target="_blank">
                                                                 <i class="icon-external-link"></i> 
+                                                            </a>
+															<a href="https://link.springer.com/content/pdf/10.1007/s00394-021-02767-x.pdf" class="tooltips" title="Download" target="_blank">
+                                                                <i class="icon-cloud-download"></i>
                                                             </a>
 													    </div>
                                                         <h4 class="pubtitle">Acute effects of cocoa flavanols on visual working memory: Maintenance and updating</h4>
