--- a/indexTR.html
+++ b/indexTR.html
@@ -515,12 +515,12 @@
                                                             <a href="#" class="pubcollapse">
                                                                 <i class="icon-expand-alt"></i>
                                                             </a>
-                                                            <!--<a href="https://direct.mit.edu/imag/article/doi/10.1162/imag_a_00173/120839/Concurrent-maintenance-of-both-veridical-and" class="tooltips" title="External link" target="_blank">
+                                                            <a href="https://link.springer.com/article/10.3758/s13428-024-02477-2#Sec33" class="tooltips" title="External link" target="_blank">
                                                                 <i class="icon-external-link"></i> 
                                                             </a>
-															<a href="https://mitp.silverchair-cdn.com/mitp/content_public/journal/imag/2/10.1162_imag_a_00173/4/imag_a_00173.pdf?Expires=1719313245&Signature=fcaVhFZeb56R3KRu3pamswignixdwtq2mPkVgVL4sTcr4GZ-I7wzSHZCYnD1NOZPnDInbSBhjd~nvMZ9ZN8yWBTFVQLpyicdQmJNLXn0zJDY69np65rkZZW2QrQ98J7JwXfSdc~MPt~3gJkD4KZ2ubdcS4zoY~eicJgdkOSeYgtJJCugSpAOLhh0QNwV70a4FvgVl4j7BikyjnRIF6XhXEOy5yaUD2MjQ85heTiKOoiaccc9-J25yXLmWUBCuuDLezKn7N7tynLBZtvS7drlSqWRrMReP9kgO8KERPAgDQByBn8lA6uVilHj0M73lJLPnKvomogo43H3pgXtgmYzCQ__&Key-Pair-Id=APKAIE5G5CRDK6RD3PGA" class="tooltips" title="Download" target="_blank">
+															<a href="https://link.springer.com/content/pdf/10.3758/s13428-024-02477-2.pdf" class="tooltips" title="Download" target="_blank">
                                                                 <i class="icon-cloud-download"></i>
-                                                            </a>-->
+                                                            </a>
 															<a href="https://osf.io/wf5uv/" class="tooltips" title="Data" target="_blank">
                                                                 <i class="icon-bar-chart"></i>
                                                             </a> 
