--- a/index.html
+++ b/index.html
@@ -498,7 +498,47 @@
                                     <div class="row">
                                         <div class="col-md-12">
                                             <div class="pitems">
-												
+
+
+											<div class="item mix cpaper" data-year="2025">
+													<div class="pubmain">
+													<div class="pubassets">
+                                                            <a href="#" class="pubcollapse">
+                                                                <i class="icon-expand-alt"></i>
+                                                            </a>
+                                                    </div>
+													<!--<div class="pubassets">
+                                                            <a href="#" class="pubcollapse">
+                                                                <i class="icon-expand-alt"></i>
+                                                            </a>
+                                                    </div>-->
+														<h4 class="pubtitle">From repulsion to attraction: Object priority drives distinct memory biases in visual working memory </h4>
+                                                        <div class="pubauthor"> <strong>Kalanoski, S., Karabay, A.</strong>, Chunharas, C., & Fougnie, D. </div>
+                                                        <div class="pubcite"><span class="label label-warning">Poster</span>  the 45th European Conference on Visual Perception (ECVP) in Mainz, Germany. (2025)</div>
+													</div>
+													<div class="pubdetails">
+                                                        <h4>Abstract</h4>
+                                                        <p>Despite being an assumption of many models, items in working memory are not stored independently.
+															The need to maintain distinctiveness between similar items produces repulsion; Capacity limits promote
+															grouping which produces attraction. Here we ask whether these biases are influenced by item priority,
+															manipulated after memory encoding via a retro-cue. Participants viewed brief displays of three colored
+															circles—two similar and one distinct in color. In half of the trials, a retro-cue indicated the most likely
+															tested item (67% validity). As expected, memory for validly cued items (2AFC color discrimination) was
+															better than invalidly cued items. On neutral trials, we found evidence of repulsion between items with
+															similar colors–lower accuracy when the foil was distorted away from the non-target color. Of particular
+															interest is whether and how item priority would alter attraction and repulsion biases. Cued (high priority)
+															items showed enhanced repulsion. In contrast, for invalid (low priority) items, repulsion switched to
+															attraction when the distinct color was cued and the tested item was the similar color. These results are
+															consistent with a framework where repulsion improves high quality memories via enhanced
+															distinctiveness, and where attraction assists low quality memories through grouping (Chunharas et al.,
+															2022). Critically, these results demonstrate that attraction and repulsion biases can co-occur on a trial,
+															depending on item priority. Further, these biases are not set in stone at encoding, but update in response
+															to changes in item priority. Taken together, these results suggest a novel mechanism of memory-based
+															attentional selection–an adaptive shift of memory representations in feature space.
+														</p>
+                                                    </div>
+												</div>						
+								
 												<div class="item mix cpaper" data-year="2025">
 													<div class="pubmain">
 													<div class="pubassets">
