--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
                                                             </a>
                                                     </div>-->
 														<h4 class="pubtitle">From repulsion to attraction: Object priority drives distinct memory biases in visual working memory </h4>
-                                                        <div class="pubauthor"> <strong>Kalanoski, S., Karabay, A.</strong>, Chunharas, C., & Fougnie, D. </div>
+                                                        <div class="pubauthor"> Kalanoski, S., <strong>Karabay, A.</strong>, Chunharas, C., & Fougnie, D. </div>
                                                         <div class="pubcite"><span class="label label-warning">Poster</span>  the 45th European Conference on Visual Perception (ECVP) in Mainz, Germany. (2025)</div>
 													</div>
 													<div class="pubdetails">
